--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/server.js",
+    "start-prod": "NODE_ENV=production node ./src/service/server.js",
+    "start-dev": "nodemon ./src/service/server.js",
     "lint": "eslint ./src"
   },
   "keywords": [],
@@ -12,12 +13,13 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.41.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "nodemon": "^2.0.22"
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.26.0",
+    "nodemon": "^3.0.1"
   },
   "dependencies": {
     "@hapi/hapi": "^21.3.2",
+    "joi": "^17.9.2",
     "nanoid": "^3.3.6"
   }
 }
